# axum-x-gres

./: .env  Cargo.toml  README.md
migrations/: 20230720132326_init.up.sql
src/: handler.rs  helper.rs  main.rs  model.rs  schema.rs
